3455
Please delimit your code with triple curly braces: `{{` and `}}`.


Reproduced outside of Eclipse with refined build manager in 2.8.0.r20877:
```scala
scala scala.tools.nsc.interactive.BuildManagerTest bip/Bop.java bip/Bip.scala
```

with Bop.java and Bip.scala as above gives:
```scala
bip/Bop.java:2: error: Bip$$ is not a member of _root_.bip
import bip.Bip$$;
       ^
```
